src/scss/_card.scss
.product {
    position: relative;

    * {
        cursor: default;
    }

    .info {
        display: flex;
        flex-direction: column;
        position: relative;
        padding: 18px;
        border: 1px solid rgba(0, 0, 0, 0.15);
        border-radius: 14px;
        transition: all ease-in .2s;
    }

    .thumbnail {
        height: 216px;
        text-align: center;
        
        img {
            max-width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }

    .flags {
        position: absolute;
        top: 18px;
        left: 0;
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        gap: 5px;
        
        .flag {
            @include flex-center;
            border-radius: 0px 8px 8px 0px;
            height: 30px;
            font-size: 12px;
            color: #FFF;
            

            &.discount {
                padding: 0 8px;
                background: $color-green;
                font-weight: 700;
            }

            &.free-shipping {
                padding: 0 11px;
                background: $color-purple;
            }
        }
    }

    .name {
        height: 40px;
        display: -webkit-box;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 2;
        overflow: hidden;
        text-overflow: ellipsis;
        margin: 0 0 15px;
        font-size: 14px;
        font-weight: 400;
        color: #000;
    }

    .prices {
        display: flex;
        align-items: flex-end;
        margin: 0 0 8px;
        gap: 5px;
    }

    .oldprice {
        color: $color-dark;
        font-size: 13px;
        font-weight: 400;
        text-decoration: line-through;
    }

    .price {
        color: $color-green;
        font-size: 18px;
        font-weight: 700;
    }

    .installment {
        color: $color-dark;
        font-size: 10px;
        font-weight: 400;
    }

    .view {
        display: none;
        background: $color-green;
        border-radius: 5px;
        font-family: 'Roboto', sans-serif;
        font-size: 12px;
        color: #FFF;
        text-transform: uppercase;
        cursor: pointer;

        &.overlay {
            position: absolute;
            left: 35px;
            right: 35px;
            top: 126px;
            @include flex-center;
            height: 36px;
            transform: translateY(5px);
            opacity: 0;
            transition: all ease-in .2s;
        }
    }

    .unavailable-message {
        min-height: 46px;
        @include flex-center;

        p {
            font-size: 13px;
        }
    }

    &.unavailable {
        .info {
            opacity: .5;
        }
    }

    &:hover {
        .info {
            box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
            transform: translateY(5px);
        }

        .view {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @media (max-width: $phone) {
        .info {
            flex-direction: row;
            padding: 20px;
            gap: 5px;
        }

        .thumbnail {
            width: 50%;
            height: 145px;
        }

        .flags {
            top: 20px;
        }

        .content {
            width: 50%;
        }

        .name {
            font-size: 12px;
            height: 35px;
            margin-bottom: 6px;
        }

        .prices {
            flex-direction: column;
            align-items: flex-start;
        }

        .price {
            font-size: 16px;
        }

        .oldPrice-container {
            min-height: 22px;
        }

        .unavailable-message {
            padding: 10px 0 0;
            min-height: 107px;
            justify-content: flex-start;
            align-items: flex-start;
        }

        .view {
            @include flex-center;
            height: 28px;
            margin-top: 8px;

            &.overlay {
                display: none;
            }
        }
    }
}

